--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4c47838536.js" crossorigin="anonymous"></script>
     <!-- Style -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <!-- Header Start -->
