--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Header Start -->
     <header class="header" id="header">
         <a href="#" class="logo">Habahsy Abdulrahman</a>
-        <i class="fa-solid fa-bars" id="menu-icon"></i>
-        <nav id="navbar">
+        <i class="fa-solid fa-bars" id="menu-icon" onclick="toggleMenu()"></i>
+        <nav id="navbar" class="navbar">
             <a href="#home" id="a" class="active">Home</a>
             <a href="#about" id="a">About</a>
             <a href="#services" id="a">Services</a>
@@ -30,7 +30,7 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Habahsy Abdulrahman</h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
             <div class="social">
                     <a href="https://www.linkedin.com/in/habashyabdulrahman/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://wWW.facebook.com/habashyiabdulrahman" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -164,6 +164,12 @@
         </div>
     </footer>
     <!-- Section Footer End -->
+    <!-- JS -->
+    <!-- Scroll js -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Typed JS -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- Main JS -->
     <script src="JS/main.js"></script>
 </body>
 </html>
