--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <img src="img/portfolio-3.png" alt="PEPSI">
                 <div class="portfolio-layer">
                     <h4>PEPSI Landing Page</h4>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://pepsi-landing-page-murex.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 4 -->
@@ -146,11 +146,11 @@
         <h2 class="heading">Contact <span>Me</span></h2>
         <form action="#">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email">
+                <input type="text" id="name" placeholder="Full Name">
+                <input type="email" id="email" placeholder="Email">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
+            <textarea name="" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" id="btn" class="btn">
         </form>
     </section>
     <!-- Section Contact End -->
@@ -169,6 +169,8 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Typed JS -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- SmtpJS -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <!-- Main JS -->
     <script src="JS/main.js"></script>
 </body>
