--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     <a href="https://www.youtube.com/@H-Abdulrahman" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                     <a href="https://www.instagram.com/habashysklana/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+                    <a href="#" ><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="#" class="btn" target="_blank">Download CV</a>
         </div>
         <div class="home-img">
             <img src="img/logo.jpg" alt="habashy Abdulrahman">
@@ -95,7 +96,7 @@
                 <img src="img/portfolio-1.png" alt="Food Lover">
                 <div class="portfolio-layer">
                     <h4>Food Lover Resturant</h4>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 2 -->
@@ -103,7 +104,7 @@
                 <img src="img/portfolio-2.png" alt="FYLO">
                 <div class="portfolio-layer">
                     <h4>FYLO Landing Page</h4>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 3 -->
@@ -111,7 +112,7 @@
                 <img src="img/portfolio-3.png" alt="PEPSI">
                 <div class="portfolio-layer">
                     <h4>PEPSI Landing Page</h4>
-                    <a href="https://pepsi-landing-page-murex.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://pepsi-landing-page-murex.vercel.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 4 -->
@@ -119,7 +120,7 @@
                 <img src="img/portfolio-4.png" alt="FUSE Company">
                 <div class="portfolio-layer">
                     <h4>FUSE Company</h4>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 5 -->
@@ -127,7 +128,7 @@
                 <img src="img/portfolio-5.png" alt="Sunny Side">
                 <div class="portfolio-layer">
                     <h4>SunnySide Landing Page</h4>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 6 -->
@@ -135,7 +136,7 @@
                 <img src="img/portfolio-6.png" alt="Product Preview Card">
                 <div class="portfolio-layer">
                     <h4>Product Preview Card</h4>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
