--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <img src="img/portfolio-2.png" alt="FYLO">
                 <div class="portfolio-layer">
                     <h4>FYLO Landing Page</h4>
-                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://habashyabdulrahman.github.io/FYLO-Landing-Page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 3 -->
