--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             </div>
             <!-- Portfolio 6 -->
             <div class="portfolio-box">
-                <img src="img/portfolio-6.png" alt="Product Preview Card">
+                <img src="img/portfolio-6.png" alt="Bondi Landing Page Website">
                 <div class="portfolio-layer">
-                    <h4>Product Preview Card</h4>
+                    <h4>Bondi Landing Page Website</h4>
                     <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
