--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img src="img/portfolio-1.png" alt="Bondi Landing Page Website">
                 <div class="portfolio-layer">
                     <h4>Bondi Landing Page Website</h4>
-                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://habashyabdulrahman.github.io/bondi-landing-page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 2 -->
@@ -103,7 +103,7 @@
                 <img src="img/portfolio-2.png" alt="Food Lover">
                 <div class="portfolio-layer">
                     <h4>Food Lover Resturant</h4>
-                    <a href="https://habashyabdulrahman.github.io/FYLO-Landing-Page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 3 -->
@@ -111,7 +111,7 @@
                 <img src="img/portfolio-3.png" alt="FYLO">
                 <div class="portfolio-layer">
                     <h4>FYLO Landing Page</h4>
-                    <a href="https://pepsi-landing-page-murex.vercel.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://habashyabdulrahman.github.io/FYLO-Landing-Page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 4 -->
@@ -119,7 +119,7 @@
                 <img src="img/portfolio-4.png" alt="PEPSI">
                 <div class="portfolio-layer">
                     <h4>PEPSI Landing Page</h4>
-                    <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://pepsi-landing-page-murex.vercel.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- Portfolio 5 -->
