--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="portfolio-container">
             <!-- Portfolio 1 -->
             <div class="portfolio-box">
-                <img src="img/portfolio-1.png" alt="Bondi Landing Page Website">
+                <img src="img/portfolio-1.jpg" alt="Bondi Landing Page Website">
                 <div class="portfolio-layer">
                     <h4>Bondi Landing Page Website</h4>
                     <a href="https://habashyabdulrahman.github.io/bondi-landing-page/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -100,7 +100,7 @@
             </div>
             <!-- Portfolio 2 -->
             <div class="portfolio-box">
-                <img src="img/portfolio-2.png" alt="Food Lover">
+                <img src="img/portfolio-2.jpg" alt="Food Lover">
                 <div class="portfolio-layer">
                     <h4>Food Lover Resturant</h4>
                     <a href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -124,7 +124,7 @@
             </div>
             <!-- Portfolio 5 -->
             <div class="portfolio-box">
-                <img src="img/portfolio-5.png" alt="FUSE Company">
+                <img src="img/portfolio-5.jpg" alt="FUSE Company">
                 <div class="portfolio-layer">
                     <h4>FUSE Company</h4>
                     <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -132,7 +132,7 @@
             </div>
             <!-- Portfolio 6 -->
             <div class="portfolio-box">
-                <img src="img/portfolio-6.png" alt="Sunny Side">
+                <img src="img/portfolio-6.jpg" alt="Sunny Side">
                 <div class="portfolio-layer">
                     <h4>SunnySide Landing Page</h4>
                     <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
