--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="https://wWW.facebook.com/habashyiabdulrahman" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://github.com/habashyabdulrahman" target="_blank"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.youtube.com/@H-Abdulrahman" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://www.instagram.com/habashysklana/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/habashyabdulrahman/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="btn" target="_blank">Download CV</a>
         </div>
