--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <!-- Portfolio 4 -->
             <div class="portfolio-box">
-                <img src="img/portfolio-4.png" alt="PEPSI">
+                <img src="img/portfolio-4.jpg" alt="PEPSI">
                 <div class="portfolio-layer">
                     <h4>PEPSI Landing Page</h4>
                     <a href="https://pepsi-landing-page-murex.vercel.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
