--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://www.youtube.com/@H-Abdulrahman" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                     <a href="https://www.instagram.com/habashyabdulrahman/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn" target="_blank">Download CV</a>
+            <a href="https://drive.google.com/file/d/1_EhCedfJ3Cz5DWx08eVrf1-smbxyASLt/view?usp=drive_link" class="btn" target="_blank">Download CV</a>
         </div>
         <div class="home-img">
             <img src="img/logo.jpg" alt="habashy Abdulrahman">
